# pdfparser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.cargo/: config.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
benchmark/: README.md  requirements.txt  sources.json
benchmark/corpus/: compete_class_index.json  manifest.json  suites.json
benchmark/ground_truth/: 01_simple_text.json  02_multi_column.json  03_large_multipage.json  04_image_heavy.json  05_special_objects.json  06_table_lattice.json  07_table_stream.json  08_table_partial_border.json  09_table_complex.json  10_mixed_document.json  11_rotated_page.json  12_encrypted_password.json  20_bank_statement_multipage.json  21_table_overflow_cells.json  22_table_merged_headers.json  23_side_by_side_tables.json  24_invoice_line_items.json  25_dense_numeric_grid.json  26_watermark_overlap.json  27_table_with_footnotes.json  30_real_ca_warn_report.json  31_real_background_checks.json  32_real_census_table324.json  33_real_argentina_votes.json  34_real_schools_contributions.json  35_real_camelot_fuel.json  36_real_two_tables.json  37_real_liabilities_superscript.json  38_real_irs_f1040.json  39_real_fed_beigebook.json  40_real_arxiv_tensorflow.json  41_real_nist_withdrawn_notice.json  42_real_insurance_italian.json  50_multi_table_stacked_page.json  51_multi_table_multipage.json  52_page_border_noise.json  53_column_span_header.json  54_row_span_categories.json  55_gap_broken_corners.json  56_stacked_uneven_tables.json  (+185 more)
benchmark/real_track/: README.md  SOURCES.md
benchmark/results/: accuracy_results.json  accuracy_results_basic_stress.json  accuracy_results_compete.json  accuracy_results_compete_hard_prod.json  accuracy_results_hard.json  accuracy_results_regression_precision.json  accuracy_results_sensing_prod.json  accuracy_scoreboard.md  accuracy_scoreboard.tsv  accuracy_scoreboard_basic_stress.md  accuracy_scoreboard_basic_stress.tsv  accuracy_scoreboard_compete_hard.md  benchmark_results.json  (+19 more)
crates/pdfparser/: Cargo.toml
crates/pdfparser-cli/: Cargo.toml
crates/pdfparser-cli/src/: main.rs
crates/pdfparser-content/: Cargo.toml
crates/pdfparser-content/src/: lexer.rs  lib.rs  vm.rs
crates/pdfparser-core/: Cargo.toml
crates/pdfparser-core/src/: error.rs  filters.rs  lib.rs  limits.rs  objects.rs  page_tree.rs
crates/pdfparser-ir/: Cargo.toml
crates/pdfparser-ir/src/: lib.rs
crates/pdfparser-tables/: Cargo.toml
crates/pdfparser-tables/src/: form.rs  geom.rs  hybrid.rs  lattice.rs  lib.rs  network.rs  options.rs  split.rs  stitch.rs  stream.rs  tuning.rs  types.rs
crates/pdfparser-tables/src/builders/: densify.rs  mod.rs  ruled.rs
crates/pdfparser-tables/src/evidence/: line.rs  mod.rs  page.rs
crates/pdfparser-tables/src/orchestrator/: mod.rs  page.rs
crates/pdfparser-tables/src/policy/: mod.rs
crates/pdfparser-tables/src/providers/: external_cli.rs  mod.rs  render.rs
crates/pdfparser-tables/src/raster/: mod.rs  morph.rs
crates/pdfparser-tables/src/router/: mod.rs
crates/pdfparser/examples/: dump_geom.rs  dump_rules.rs
crates/pdfparser/src/: document.rs  extract.rs  font_load.rs  form_resolve.rs  lib.rs  options.rs  raster_images.rs
crates/pdfparser/tests/: form_table_rules.rs  phase14_multitable.rs  phase15_census.rs  phase_o_objects.rs  phase_t_text.rs  phase_u_tables.rs  phase_v_tables.rs  raster_image_table.rs
docs/: AUTONOMOUS_PROGRESS.md  README.md  accuracy-scoreboard-basic-stress.md  accuracy-scoreboard-compete-hard.md  accuracy-scoreboard-compete.md  accuracy-scoreboard-hard.md  accuracy-scoreboard-precision.md  accuracy-scoreboard-sensing.md  accuracy-scoreboard.md  benchmark-pipeline-status.md  camelot-comparison-replication.md  compete-dataset-design.md  compete-struggle-analysis.md  compete-suite-verification-numbers.md  compete_hard_baseline_frozen.json  design-architecture-feature-extraction.md  design-native-pdf-parser.md  design-redesign-text-tables.md  design-table-engine-v2.md  design-table-engine-v3-industry.md  icdar-algorithm-strategy.md  icdar-competitive-report.md  icdar-plateau-analysis-and-plan.md  icdar-regression-analysis.md  implementation-plan-v3-gated.md  market-analysis-pdf-parsers.md  options-deprecation-map.md  phase-o-report.md  phase-t-report.md  phase-u-report.md  phase-v-report.md  phase0-2-validation-report.md  research-table-extraction-sota.md  sensing-development-process.md  sota-verification.md  table-orchestrator-architecture.md
examples/: extract_text.rs
(+140 files in other folders)
