[package]
name = "pdfparser-content"
description = "Content stream lexer and text graphics VM"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdfparser-ir = { workspace = true }
pdfparser-fonts = { workspace = true }
thiserror = { workspace = true }
