[package]
name = "pdfparser-ir"
description = "Public intermediate representation types for pdfparser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = ["serde"]
serde = ["dep:serde"]
