[package]
name = "pdfparser-tables"
description = "Multi-strategy PDF table extraction (Phase V: multi-strategy tables)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pdfparser-ir = { workspace = true }
pdfparser-content = { workspace = true }
serde = { workspace = true, optional = true }
image = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde", "pdfparser-ir/serde"]
